--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,6 +5,11 @@
 <table>
   <thead>
     <tr>
+      <th>
+        <strong> Likes in all Posts: <%= count_likes_for_collection @posts %></strong>
+      </th>
+    </tr>
+    <tr>
       <th>Title</th>
       <th>Content</th>
       <th colspan="3"></th>
